update on style

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <div>
     <button class="message">
-        Time is valuable!
+        <h1>Time is valuable!</h1>
     </button>
     </div>
     <div class="mainMessage">
