--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clock</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=Silkscreen&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -14,13 +17,13 @@
         <div class="minute"></div>
         <div class="second"></div>
     </div>
-    <div>
+    
     <button class="message">
-        <h1>Time is valuable!</h1>
+        Time is valuable!
     </button>
-    </div>
+  
     <div class="mainMessage">
-        <h1>Do what you love!</h1>
+        <h1>Do<br>what<br> you<br> love!</h1>
     </div>
 
     <script src="script.js">
